adding a new morphology structure and literal translation

--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
 <script src="data/crossReferences.js"></script>
 <script src="data/morphology.js"></script>
 <script src="data/literalConsistent.js"></script>
+<script src="data/literalConsistentExtra.js"></script>
 
 <!-- apis
 <script src="api/search.js"></script>
