don't let the word panels be too high

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 		</div>
 	</div>
 </div>
-<div class="wordControlPanelTemplate content">
+<div class="wordControlPanelTemplate">
 	<div class="content-padding">
 		<style></style>
 		<div class="word-details">
