--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 		<div class="content">
 			<div class="content-padding">
 				<h2>Help</h2>
-				<p><a href="http://scruffian.wordpress.com/contact/">Having problems?</a></p>
+				<p><a href="http://scruffian.wordpress.com/contact/">Having problems? Email for help!</a></p>
 
 				<ul>
 					<li>To find out about a word, click on it</li>
