new url structure and make it possible to clear highlighted word

--- a/index.html
+++ b/index.html
@@ -124,72 +124,72 @@
 	<div class="goToPanel menu left" id="goToPanel">
 		<a href="#goToPanel" class="link-text open-menu" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-book"></span> <span class="link-text">Go to</span></a>
 		<div class="lookup bookSelect">
-			<a href="#reference=Genesis:1" data-chapters="50">Genesis <span class="chapter"></span></a>
-			<a href="#reference=Exodus:1" data-chapters="40">Exodus <span class="chapter"></span></a>
-			<a href="#reference=Leviticus:1" data-chapters="27">Leviticus <span class="chapter"></span></a>
-			<a href="#reference=Numbers:1" data-chapters="36">Numbers <span class="chapter"></span></a>
-			<a href="#reference=Deuteronomy:1" data-chapters="34">Deuteronomy <span class="chapter"></span></a>
-			<a href="#reference=Joshua:1" data-chapters="24">Joshua <span class="chapter"></span></a>
-			<a href="#reference=Judges:1" data-chapters="21">Judges <span class="chapter"></span></a>
-			<a href="#reference=Ruth:1" data-chapters="4">Ruth <span class="chapter"></span></a>
-			<a href="#reference=1 Samuel:1" data-chapters="31">1 Samuel <span class="chapter"></span></a>
-			<a href="#reference=2 Samuel:1" data-chapters="24">2 Samuel <span class="chapter"></span></a>
-			<a href="#reference=1 Kings:1" data-chapters="24">1 Kings <span class="chapter"></span></a>
-			<a href="#reference=2 Kings:1" data-chapters="25">2 Kings <span class="chapter"></span></a>
-			<a href="#reference=1 Chronicles:1" data-chapters="29">1 Chronicles <span class="chapter"></span></a>
-			<a href="#reference=2 Chronicles:1" data-chapters="36">2 Chronicles <span class="chapter"></span></a>
-			<a href="#reference=Ezra:1" data-chapters="10">Ezra <span class="chapter"></span></a>
-			<a href="#reference=Nehemiah:1" data-chapters="13">Nehemiah <span class="chapter"></span></a>
-			<a href="#reference=Esther:1" data-chapters="10">Esther <span class="chapter"></span></a>
-			<a href="#reference=Job:1" data-chapters="42">Job <span class="chapter"></span></a>
-			<a href="#reference=Psalm:1" data-chapters="150">Psalm <span class="chapter"></span></a>
-			<a href="#reference=Proverbs:1" data-chapters="31">Proverbs <span class="chapter"></span></a>
-			<a href="#reference=Ecclesiastes:1" data-chapters="12">Ecclesiastes <span class="chapter"></span></a>
-			<a href="#reference=Song of Songs:1" data-chapters="8">Song of Songs <span class="chapter"></span></a>
-			<a href="#reference=Isaiah:1" data-chapters="66">Isaiah <span class="chapter"></span></a>
-			<a href="#reference=Jeremiah:1" data-chapters="52">Jeremiah <span class="chapter"></span></a>
-			<a href="#reference=Lamentations:1" data-chapters="4">Lamentations <span class="chapter"></span></a>
-			<a href="#reference=Ezekiel:1" data-chapters="48">Ezekiel <span class="chapter"></span></a>
-			<a href="#reference=Daniel:1" data-chapters="12">Daniel <span class="chapter"></span></a>
-			<a href="#reference=Hosea:1" data-chapters="14">Hosea <span class="chapter"></span></a>
-			<a href="#reference=Joel:1" data-chapters="3">Joel <span class="chapter"></span></a>
-			<a href="#reference=Amos:1" data-chapters="9">Amos <span class="chapter"></span></a>
-			<a href="#reference=Obadiah:1">Obadiah</a>
-			<a href="#reference=Jonah:1" data-chapters="4">Jonah <span class="chapter"></span></a>
-			<a href="#reference=Micah:1" data-chapters="7">Micah <span class="chapter"></span></a>
-			<a href="#reference=Nahum:1" data-chapters="3">Nahum <span class="chapter"></span></a>
-			<a href="#reference=Habakkuk:1" data-chapters="3">Habakkuk <span class="chapter"></span></a>
-			<a href="#reference=Zephaniah:1" data-chapters="3">Zephaniah <span class="chapter"></span></a>
-			<a href="#reference=Haggai:1" data-chapters="2">Haggai <span class="chapter"></span></a>
-			<a href="#reference=Zechariah:1" data-chapters="14">Zechariah <span class="chapter"></span></a>
-			<a href="#reference=Malachi:1" data-chapters="4">Malachi <span class="chapter"></span></a>
-			<a href="#reference=Matthew:1" data-chapters="28">Matthew <span class="chapter"></span></a>
-			<a href="#reference=Mark:1" data-chapters="16">Mark <span class="chapter"></span></a>
-			<a href="#reference=Luke:1" data-chapters="24">Luke <span class="chapter"></span></a>
-			<a href="#reference=John:1" data-chapters="21">John <span class="chapter"></span></a>
-			<a href="#reference=Acts:1" data-chapters="28">Acts <span class="chapter"></span></a>
-			<a href="#reference=Romans:1" data-chapters="16">Romans <span class="chapter"></span></a>
-			<a href="#reference=1 Corinthians:1" data-chapters="16">1 Corinthians <span class="chapter"></span></a>
-			<a href="#reference=2 Corinthians:1" data-chapters="13">2 Corinthians <span class="chapter"></span></a>
-			<a href="#reference=Galatians:1" data-chapters="6">Galatians <span class="chapter"></span></a>
-			<a href="#reference=Ephesians:1" data-chapters="6">Ephesians <span class="chapter"></span></a>
-			<a href="#reference=Philippians:1" data-chapters="4">Philippians <span class="chapter"></span></a>
-			<a href="#reference=Colossians:1" data-chapters="4">Colossians <span class="chapter"></span></a>
-			<a href="#reference=1 Thessalonians:1" data-chapters="5">1 Thessalonians <span class="chapter"></span></a>
-			<a href="#reference=2 Thessalonians:1" data-chapters="3">2 Thessalonians <span class="chapter"></span></a>
-			<a href="#reference=1 Timothy:1" data-chapters="6">1 Timothy <span class="chapter"></span></a>
-			<a href="#reference=2 Timothy:1" data-chapters="4">2 Timothy <span class="chapter"></span></a>
-			<a href="#reference=Titus:1" data-chapters="3">Titus <span class="chapter"></span></a>
-			<a href="#reference=Philemon:1">Philemon</span></a>
-			<a href="#reference=Hebrews:1" data-chapters="13">Hebrews <span class="chapter"></span></a>
-			<a href="#reference=James:1" data-chapters="5">James <span class="chapter"></span></a>
-			<a href="#reference=1 Peter:1" data-chapters="5">1 Peter <span class="chapter"></span></a>
-			<a href="#reference=2 Peter:1" data-chapters="3">2 Peter <span class="chapter"></span></a>
-			<a href="#reference=1 John:1" data-chapters="5">1 John <span class="chapter"></span></a>
-			<a href="#reference=2 John:1">2 John</a>
-			<a href="#reference=3 John:1">3 John</a>
-			<a href="#reference=Jude:1">Jude</a>
-			<a href="#reference=Revelation:1" data-chapters="22">Revelation <span class="chapter"></span></a>
+			<a href="#/Genesis/1" data-chapters="50">Genesis <span class="chapter"></span></a>
+			<a href="#/Exodus/1" data-chapters="40">Exodus <span class="chapter"></span></a>
+			<a href="#/Leviticus/1" data-chapters="27">Leviticus <span class="chapter"></span></a>
+			<a href="#/Numbers/1" data-chapters="36">Numbers <span class="chapter"></span></a>
+			<a href="#/Deuteronomy/1" data-chapters="34">Deuteronomy <span class="chapter"></span></a>
+			<a href="#/Joshua/1" data-chapters="24">Joshua <span class="chapter"></span></a>
+			<a href="#/Judges/1" data-chapters="21">Judges <span class="chapter"></span></a>
+			<a href="#/Ruth/1" data-chapters="4">Ruth <span class="chapter"></span></a>
+			<a href="#/1 Samuel/1" data-chapters="31">1 Samuel <span class="chapter"></span></a>
+			<a href="#/2 Samuel/1" data-chapters="24">2 Samuel <span class="chapter"></span></a>
+			<a href="#/1 Kings/1" data-chapters="24">1 Kings <span class="chapter"></span></a>
+			<a href="#/2 Kings/1" data-chapters="25">2 Kings <span class="chapter"></span></a>
+			<a href="#/1 Chronicles/1" data-chapters="29">1 Chronicles <span class="chapter"></span></a>
+			<a href="#/2 Chronicles/1" data-chapters="36">2 Chronicles <span class="chapter"></span></a>
+			<a href="#/Ezra/1" data-chapters="10">Ezra <span class="chapter"></span></a>
+			<a href="#/Nehemiah/1" data-chapters="13">Nehemiah <span class="chapter"></span></a>
+			<a href="#/Esther/1" data-chapters="10">Esther <span class="chapter"></span></a>
+			<a href="#/Job/1" data-chapters="42">Job <span class="chapter"></span></a>
+			<a href="#/Psalm/1" data-chapters="150">Psalm <span class="chapter"></span></a>
+			<a href="#/Proverbs/1" data-chapters="31">Proverbs <span class="chapter"></span></a>
+			<a href="#/Ecclesiastes/1" data-chapters="12">Ecclesiastes <span class="chapter"></span></a>
+			<a href="#/Song of Songs/1" data-chapters="8">Song of Songs <span class="chapter"></span></a>
+			<a href="#/Isaiah/1" data-chapters="66">Isaiah <span class="chapter"></span></a>
+			<a href="#/Jeremiah/1" data-chapters="52">Jeremiah <span class="chapter"></span></a>
+			<a href="#/Lamentations/1" data-chapters="4">Lamentations <span class="chapter"></span></a>
+			<a href="#/Ezekiel/1" data-chapters="48">Ezekiel <span class="chapter"></span></a>
+			<a href="#/Daniel/1" data-chapters="12">Daniel <span class="chapter"></span></a>
+			<a href="#/Hosea/1" data-chapters="14">Hosea <span class="chapter"></span></a>
+			<a href="#/Joel/1" data-chapters="3">Joel <span class="chapter"></span></a>
+			<a href="#/Amos/1" data-chapters="9">Amos <span class="chapter"></span></a>
+			<a href="#/Obadiah/1">Obadiah</a>
+			<a href="#/Jonah/1" data-chapters="4">Jonah <span class="chapter"></span></a>
+			<a href="#/Micah/1" data-chapters="7">Micah <span class="chapter"></span></a>
+			<a href="#/Nahum/1" data-chapters="3">Nahum <span class="chapter"></span></a>
+			<a href="#/Habakkuk/1" data-chapters="3">Habakkuk <span class="chapter"></span></a>
+			<a href="#/Zephaniah/1" data-chapters="3">Zephaniah <span class="chapter"></span></a>
+			<a href="#/Haggai/1" data-chapters="2">Haggai <span class="chapter"></span></a>
+			<a href="#/Zechariah/1" data-chapters="14">Zechariah <span class="chapter"></span></a>
+			<a href="#/Malachi/1" data-chapters="4">Malachi <span class="chapter"></span></a>
+			<a href="#/Matthew/1" data-chapters="28">Matthew <span class="chapter"></span></a>
+			<a href="#/Mark/1" data-chapters="16">Mark <span class="chapter"></span></a>
+			<a href="#/Luke/1" data-chapters="24">Luke <span class="chapter"></span></a>
+			<a href="#/John/1" data-chapters="21">John <span class="chapter"></span></a>
+			<a href="#/Acts/1" data-chapters="28">Acts <span class="chapter"></span></a>
+			<a href="#/Romans/1" data-chapters="16">Romans <span class="chapter"></span></a>
+			<a href="#/1 Corinthians/1" data-chapters="16">1 Corinthians <span class="chapter"></span></a>
+			<a href="#/2 Corinthians/1" data-chapters="13">2 Corinthians <span class="chapter"></span></a>
+			<a href="#/Galatians/1" data-chapters="6">Galatians <span class="chapter"></span></a>
+			<a href="#/Ephesians/1" data-chapters="6">Ephesians <span class="chapter"></span></a>
+			<a href="#/Philippians/1" data-chapters="4">Philippians <span class="chapter"></span></a>
+			<a href="#/Colossians/1" data-chapters="4">Colossians <span class="chapter"></span></a>
+			<a href="#/1 Thessalonians/1" data-chapters="5">1 Thessalonians <span class="chapter"></span></a>
+			<a href="#/2 Thessalonians/1" data-chapters="3">2 Thessalonians <span class="chapter"></span></a>
+			<a href="#/1 Timothy/1" data-chapters="6">1 Timothy <span class="chapter"></span></a>
+			<a href="#/2 Timothy/1" data-chapters="4">2 Timothy <span class="chapter"></span></a>
+			<a href="#/Titus/1" data-chapters="3">Titus <span class="chapter"></span></a>
+			<a href="#/Philemon/1">Philemon</span></a>
+			<a href="#/Hebrews/1" data-chapters="13">Hebrews <span class="chapter"></span></a>
+			<a href="#/James/1" data-chapters="5">James <span class="chapter"></span></a>
+			<a href="#/1 Peter/1" data-chapters="5">1 Peter <span class="chapter"></span></a>
+			<a href="#/2 Peter/1" data-chapters="3">2 Peter <span class="chapter"></span></a>
+			<a href="#/1 John/1" data-chapters="5">1 John <span class="chapter"></span></a>
+			<a href="#/2 John/1">2 John</a>
+			<a href="#/3 John/1">3 John</a>
+			<a href="#/Jude/1">Jude</a>
+			<a href="#/Revelation/1" data-chapters="22">Revelation <span class="chapter"></span></a>
 			<a href="#" class="randomReference" title="Load random reference">Bibliomancy<span class="icon-die"> </span></a>
 		</div>
 	</div>
@@ -380,6 +380,7 @@
 			<strong>Derivation:</strong> <span class="wordControlPanelDerivation"></span><br />
 			<strong>Morphology:</strong> <span class="wordControlPanelMorphology"></span><br />
 		</div>
+		<a aria-hidden="true" class="icon-cross close-word-details"></a>
 	</div>
 </div>
 
