remove unhelpful key codes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	</div>
 
 	<div id="wordDetailsPanel" class="menu left">
-		<a href="#wordDetailsPanel" class="link-text open-menu" id="keyCode68" title="go to"><span aria-hidden="true" class="icon-details"></span> <span class="link-text">Word details</span></a>
+		<a href="#wordDetailsPanel" class="link-text open-menu" title="go to"><span aria-hidden="true" class="icon-details"></span> <span class="link-text">Word details</span></a>
 		<div id="wordControlPanel" class="content">
 			<style></style>
 			<div class="control-panel content-padding">
@@ -122,7 +122,7 @@
 
 
 	<div class="goToPanel menu left" id="goToPanel">
-		<a href="#goToPanel" class="link-text open-menu" id="keyCode71" title="go to"><span aria-hidden="true" class="icon-book"></span> <span class="link-text">Go to</span></a>
+		<a href="#goToPanel" class="link-text open-menu" title="go to"><span aria-hidden="true" class="icon-book"></span> <span class="link-text">Go to</span></a>
 		<div class="lookup bookSelect">
 			<a href="#/Genesis/1" data-chapters="50">Genesis <span class="chapter"></span></a>
 			<a href="#/Exodus/1" data-chapters="40">Exodus <span class="chapter"></span></a>
@@ -195,7 +195,7 @@
 	</div>
 
 	<div id="helpPanel" class="menu left">
-		<a href="#helpPanel" class="link-text open-menu" id="keyCode72" title="help"><span aria-hidden="true" class="icon-question"></span> <span class="link-text">Help</span></a>
+		<a href="#helpPanel" class="link-text open-menu" title="help"><span aria-hidden="true" class="icon-question"></span> <span class="link-text">Help</span></a>
 		<div class="content">
 			<div class="content-padding">
 				<h2>Help</h2>
@@ -219,7 +219,7 @@
 
 	<!-- Settings Panel -->
 	<div id="settingsPanel" class="menu left">
-		<a href="#settingsPanel" class="link-text open-menu" id="keyCode74" title="settings">
+		<a href="#settingsPanel" class="link-text open-menu" title="settings">
 			<span aria-hidden="true" class="icon-cog2"></span> <span class="link-text">Settings</span>
 		</a>
 		<div class="content">
@@ -289,7 +289,7 @@
 
 
 	<div id="referenceTracking" class="searchPanel menu right">
-		<a href="#referenceTracking" id="keyCode83" class="link-text open-menu" title="Search">
+		<a href="#referenceTracking" class="link-text open-menu" title="Search">
 			<span aria-hidden="true" class="icon-search"></span> <span class="link-text">Search</span>
 		</a>
 		<form class="search">
