Fix the broken panel opening

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	</div>
 
 	<div id="wordDetailsPanel" class="menu left">
-		<a href="#wordDetailsPanel" class="link-text open-menu" title="go to"><span aria-hidden="true" class="icon-details"></span> <span class="link-text">Word details</span></a>
+		<a href="#wordDetailsPanel" id="wordDetailsPanelLink" class="link-text open-menu" title="go to"><span aria-hidden="true" class="icon-details"></span> <span class="link-text">Word details</span></a>
 		<div id="wordControlPanel" class="content">
 			<style></style>
 			<div class="control-panel content-padding">
@@ -289,7 +289,7 @@
 
 
 	<div id="referenceTracking" class="searchPanel menu right">
-		<a href="#referenceTracking" class="link-text open-menu" title="Search">
+		<a href="#referenceTracking" id="searchPanelLink" class="link-text open-menu" title="Search">
 			<span aria-hidden="true" class="icon-search"></span> <span class="link-text">Search</span>
 		</a>
 		<form class="search">
