Lots of fixes for search and word details panel

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 	<div class="content-padding">
 		<style></style>
 		<div class="word-details">
-			<span class="wordControlPanelStrongsNumber"></span> | <span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span> | <span class="wordControlPanelTransliteration"></span> | <span class="wordControlPanelPronounciation"></span>
+			<span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span> | <span class="wordControlPanelTransliteration"></span> | <span class="wordControlPanelPronounciation"></span>
 			<br />
 			<br />
 			<div class="word-tree" id="wordTreeRoots"></div>
@@ -147,7 +147,7 @@
 			<br />
 			<strong>Morphology:</strong> <span class="wordControlPanelMorphology"></span><br />
 		</div>
-		<a aria-hidden="true" class="icon-cross close-word-details"></a>
+		<h3>Search results</h3>
 	</div>
 </div>
 
@@ -247,7 +247,6 @@
 <script src="modules/menu.js"></script>
 
 <script src="js/morphologyApi.js"></script>
-<script src="modules/search.js"></script>
 <script src="modules/wordPanel.js"></script>
 <script src="js/loading.js"></script>
 <script src="js/popup.js"></script>
@@ -260,6 +259,7 @@
 <script src="js/randomReference.js"></script>
 
 <script src="build/bundle.js"></script>
+<script src="modules/search.js"></script>
 
 <script>
 	// Check if a new cache is available on page load.
