--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<option value="Revelation">Revelation</option>
 				</select>
 				<select id="chapterSelect" class="lookup dynamic chapterSelect" tabindex="2"></select>
-				<select name="rightVersion" id="versionSelectorRight" class="versionSelector" data-target="right">
+				<select name="rightVersion" id="versionSelectorRight" class="versionSelector right" data-target="right">
 					<option value="original">Original</option>
 					<option value="kjv" selected>KJV</option>
 					<option value="web">WEB</option>
