--- a/index.html
+++ b/index.html
@@ -214,29 +214,27 @@
 <script src="data/bible.js"></script>
 <script src="data/strongs-dictionary.js"></script>
 <script src="data/extra-dictionary.js"></script>
-<!--<script src="data/kjvdwyer7.js"></script>
-<script src="data/web3.js"></script>-->
 <script src="modules/versionSelector.js"></script>
-<!--<script src="data/hebrew6.js"></script>-->
-<script src="data/strongsObjectWithFamilies2.js"></script>
-<!--<script src="data/jonah.js"></script>
+<!-- These modules are loaded by the worker
+<script src="data/kjvdwyer7.js"></script>
+<script src="data/web3.js"></script>
+<script src="data/hebrew6.js"></script>
+<script src="data/jonah.js"></script>
 <script src="data/greek4.js"></script>-->
+<script src="data/strongsObjectWithFamilies2.js"></script>
 <script src="data/crossReferences.js"></script>
 <script src="data/morphology.js"></script>
 <script src="data/literalConsistent.js"></script>
 <script src="data/literalConsistentExtra.js"></script>
 
 <!-- apis
-<script src="api/search.js"></script>
-<script src="api/reference.js"></script>-->
+<script src="api/search.js"></script>-->
 <script src="api/word.js"></script>
 
 <!--modules -->
 <script src="modules/hebrew.js"></script>
 <script src="js/colors.js"></script>
 <script src="js/events.js"></script>
-<!--<script src="modules/disableHover.js"></script>-->
-<script src="modules/readingMode.js"></script>
 <script src="js/functionalScripts.js"></script>
 <script src="modules/translateLiterally.js"></script>
 <script src="modules/reference.js"></script>
